# software

./: temp.txt
include/vision/aard/: AprilTagWrapper.hpp
src/vision/aard/: AprilTagWrapper.cpp  AprilTagWrapperMain.cpp  CMakeLists.txt  OpenCvExample.cpp
src/vision/aard/apriltag-data/: Readme.txt  depth1.txt  depth2.txt  depth3.txt  depth4.txt  depth5.txt
